add project Api

--- a/PlasticManufacturer.API/Web.config
+++ b/PlasticManufacturer.API/Web.config
@@ -10,7 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-PlasticManufacturer.API-20170822105113.mdf;Initial Catalog=aspnet-PlasticManufacturer.API-20170822105113;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="PlasticManufacturer" connectionString="Data Source=184.168.194.53; Initial Catalog=PlasticManufacturerDev; User Id=plasticDev; Password=plasticDev; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <!-- <add name="PlasticManufacturer" connectionString="Data Source=184.168.194.53; Initial Catalog=PlasticManufacturerDev; User Id=plasticDev; Password=plasticDev; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
+    <add name="PlasticManufacturer" connectionString="Data Source=184.168.194.53; Initial Catalog=PlasticManufacturerHom; User Id=plasticHom; Password=@plasticHom!; MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
@@ -20,7 +21,8 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
-    <customErrors mode="Off"/>
+    <customErrors mode="Off" />
+    <trust level="Full" />
   </system.web>
   <system.webServer>
     <modules>
@@ -95,10 +97,10 @@
     </providers>
   </entityFramework>
   <system.codedom>
-    <compilers>
+    <!--<compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
-    </compilers>
+    </compilers>-->
   </system.codedom>
 
 </configuration>
