--- a/PlasticManufacturer.Client/PlasticManufacturer.Client.csproj
+++ b/PlasticManufacturer.Client/PlasticManufacturer.Client.csproj
@@ -105,6 +105,8 @@
     <Content Include="app\events\event-details\session-list.component.html" />
     <Content Include="app\events\event-details\upvote.component.css" />
     <Content Include="app\nav\navbar.component.html" />
+    <Content Include="app\opacities\opacity-list.component.html" />
+    <Content Include="app\opacities\opacity.componet.html" />
     <Content Include="app\user\login.component.html" />
     <Content Include="app\user\profile.component.html" />
     <Content Include="images\arr-1.gif" />
@@ -5726,6 +5728,12 @@
     <TypeScriptCompile Include="app\events\shared\restricted-words.validator.ts" />
     <TypeScriptCompile Include="app\main.ts" />
     <TypeScriptCompile Include="app\nav\navbar.component.ts" />
+    <TypeScriptCompile Include="app\opacities\index.ts" />
+    <TypeScriptCompile Include="app\opacities\opacity-guard.service.ts" />
+    <TypeScriptCompile Include="app\opacities\opacity-list.component.ts" />
+    <TypeScriptCompile Include="app\opacities\opacity.component.ts" />
+    <TypeScriptCompile Include="app\opacities\opacity.model.ts" />
+    <TypeScriptCompile Include="app\opacities\opacity.service.ts" />
     <TypeScriptCompile Include="app\routes.ts" />
     <TypeScriptCompile Include="app\shared\generic-validator.ts" />
     <TypeScriptCompile Include="app\user\auth.service.ts" />
