--- a/PlasticManufacturer.Client/PlasticManufacturer.Client.csproj
+++ b/PlasticManufacturer.Client/PlasticManufacturer.Client.csproj
@@ -100,6 +100,8 @@
     <Content Include="app\carriers\carrier-list.component.html" />
     <Content Include="app\carriers\carrier.component.html" />
     <Content Include="app\categories\category.component.html" />
+    <Content Include="app\Customers\customer-list.component.html" />
+    <Content Include="app\Customers\customer.component.html" />
     <Content Include="app\events\create-event.component.html" />
     <Content Include="app\events\event-details\create-session.component.html" />
     <Content Include="app\events\event-details\event-details.component.html" />
@@ -108,15 +110,8 @@
     <Content Include="app\nav\navbar.component.html" />
     <Content Include="app\opacities\opacity-list.component.html" />
     <Content Include="app\opacities\opacity.component.html" />
-    <Content Include="app\packages\index.js" />
-    <Content Include="app\packages\package--list.component.js" />
-    <Content Include="app\packages\package-guard.service.js" />
-    <Content Include="app\packages\package-list.component.html" />
-    <Content Include="app\packages\package-list.component.js" />
-    <Content Include="app\packages\package.component.html" />
-    <Content Include="app\packages\package.component.js" />
-    <Content Include="app\packages\package.model.js" />
-    <Content Include="app\packages\package.service.js" />
+    <Content Include="app\packagings\packaging-list.component.html" />
+    <Content Include="app\packagings\packaging.component.html" />
     <Content Include="app\user\login.component.html" />
     <Content Include="app\user\profile.component.html" />
     <Content Include="images\arr-1.gif" />
@@ -5671,13 +5666,6 @@
     <Content Include="node_modules\toastr\toastr.scss" />
     <Content Include="images\facebox\Thumbs.db" />
     <Content Include="images\Thumbs.db" />
-    <Content Include="app\packages\index.js.map" />
-    <Content Include="app\packages\package--list.component.js.map" />
-    <Content Include="app\packages\package-guard.service.js.map" />
-    <Content Include="app\packages\package-list.component.js.map" />
-    <Content Include="app\packages\package.component.js.map" />
-    <Content Include="app\packages\package.model.js.map" />
-    <Content Include="app\packages\package.service.js.map" />
     <None Include="Properties\PublishProfiles\Homolog.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -5722,6 +5710,12 @@
     <TypeScriptCompile Include="app\categories\category.component.ts" />
     <TypeScriptCompile Include="app\categories\category.model.ts" />
     <TypeScriptCompile Include="app\categories\category.service.ts" />
+    <TypeScriptCompile Include="app\Customers\customer-guard.service.ts" />
+    <TypeScriptCompile Include="app\Customers\customer-list.component.ts" />
+    <TypeScriptCompile Include="app\Customers\customer.component.ts" />
+    <TypeScriptCompile Include="app\Customers\customer.model.ts" />
+    <TypeScriptCompile Include="app\Customers\customer.service.ts" />
+    <TypeScriptCompile Include="app\Customers\index.ts" />
     <TypeScriptCompile Include="app\dummy.ts" />
     <TypeScriptCompile Include="app\errors\404.component.ts" />
     <TypeScriptCompile Include="app\app-component.ts" />
@@ -5751,12 +5745,12 @@
     <TypeScriptCompile Include="app\opacities\opacity.component.ts" />
     <TypeScriptCompile Include="app\opacities\opacity.model.ts" />
     <TypeScriptCompile Include="app\opacities\opacity.service.ts" />
-    <TypeScriptCompile Include="app\packages\index.ts" />
-    <TypeScriptCompile Include="app\packages\package-guard.service.ts" />
-    <TypeScriptCompile Include="app\packages\package-list.component.ts" />
-    <TypeScriptCompile Include="app\packages\package.component.ts" />
-    <TypeScriptCompile Include="app\packages\package.model.ts" />
-    <TypeScriptCompile Include="app\packages\package.service.ts" />
+    <TypeScriptCompile Include="app\packagings\index.ts" />
+    <TypeScriptCompile Include="app\packagings\packaging-guard.service.ts" />
+    <TypeScriptCompile Include="app\packagings\packaging-list.component.ts" />
+    <TypeScriptCompile Include="app\packagings\packaging.component.ts" />
+    <TypeScriptCompile Include="app\packagings\packaging.model.ts" />
+    <TypeScriptCompile Include="app\packagings\packaging.service.ts" />
     <TypeScriptCompile Include="app\routes.ts" />
     <TypeScriptCompile Include="app\shared\generic-validator.ts" />
     <TypeScriptCompile Include="app\user\auth.service.ts" />
