--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
-bin/
-obj/
-/bin/
-/obj/
+typings
+**/app/**/*.js
+**/app/**/*.map
+node_modules
+jspm_packages
+bower_components
+
+**/*.log/*.*
+**/*.log
+
+.vs
+**/*.sou
+**/*.user
+bin
+obj
+packages
