--- a/PlasticManufacturer.Client/PlasticManufacturer.Client.csproj
+++ b/PlasticManufacturer.Client/PlasticManufacturer.Client.csproj
@@ -100,8 +100,8 @@
     <Content Include="app\carriers\carrier-list.component.html" />
     <Content Include="app\carriers\carrier.component.html" />
     <Content Include="app\categories\category.component.html" />
-    <Content Include="app\Customers\customer-list.component.html" />
-    <Content Include="app\Customers\customer.component.html" />
+    <Content Include="app\customers\customer-list.component.html" />
+    <Content Include="app\customers\customer.component.html" />
     <Content Include="app\events\create-event.component.html" />
     <Content Include="app\events\event-details\create-session.component.html" />
     <Content Include="app\events\event-details\event-details.component.html" />
@@ -5713,12 +5713,12 @@
     <TypeScriptCompile Include="app\categories\category.component.ts" />
     <TypeScriptCompile Include="app\categories\category.model.ts" />
     <TypeScriptCompile Include="app\categories\category.service.ts" />
-    <TypeScriptCompile Include="app\Customers\customer-guard.service.ts" />
-    <TypeScriptCompile Include="app\Customers\customer-list.component.ts" />
-    <TypeScriptCompile Include="app\Customers\customer.component.ts" />
-    <TypeScriptCompile Include="app\Customers\customer.model.ts" />
-    <TypeScriptCompile Include="app\Customers\customer.service.ts" />
-    <TypeScriptCompile Include="app\Customers\index.ts" />
+    <TypeScriptCompile Include="app\customers\customer-guard.service.ts" />
+    <TypeScriptCompile Include="app\customers\customer-list.component.ts" />
+    <TypeScriptCompile Include="app\customers\customer.component.ts" />
+    <TypeScriptCompile Include="app\customers\customer.model.ts" />
+    <TypeScriptCompile Include="app\customers\customer.service.ts" />
+    <TypeScriptCompile Include="app\customers\index.ts" />
     <TypeScriptCompile Include="app\dummy.ts" />
     <TypeScriptCompile Include="app\errors\404.component.ts" />
     <TypeScriptCompile Include="app\app-component.ts" />
