--- a/PlasticManufacturer.Client/package.json
+++ b/PlasticManufacturer.Client/package.json
@@ -11,27 +11,32 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "4.0.0",
-    "@angular/compiler": "4.0.0",
-    "@angular/core": "4.0.0",
-    "@angular/forms": "4.0.0",
-    "@angular/http": "4.0.0",
-    "@angular/platform-browser": "4.0.0",
-    "@angular/platform-browser-dynamic": "4.0.0",
-    "@angular/router": "4.0.0",
+    "@angular/animations": "^4.2.4",
+    "@angular/cdk": "^2.0.0-beta.12",
+    "@angular/common": "4.4.4",
+    "@angular/compiler": "4.2.4",
+    "@angular/core": "4.4.4",
+    "@angular/forms": "4.2.4",
+    "@angular/http": "4.2.4",
+    "@angular/material": "^2.0.0-beta.12",
+    "@angular/platform-browser": "4.2.4",
+    "@angular/platform-browser-dynamic": "4.2.4",
+    "@angular/router": "4.2.4",
     "core-js": "2.4.1",
+    "hammerjs": "^2.0.8",
     "ng2f-bootstrap": "^0.0.4",
     "ng2f-server": "^0.2.3",
-    "rxjs": "5.0.1",
+    "rxjs": "5.4.2",
     "systemjs": "0.19.40",
     "toastr": "^2.1.2",
-    "zone.js": "0.8.4"
+    "zone.js": "0.8.14"
   },
   "devDependencies": {
-    "concurrently": "3.2.0",
-    "typescript": "2.1.1",
     "@types/core-js": "0.9.34",
-    "@types/node": "6.0.46"
+    "@types/hammerjs": "^2.0.35",
+    "@types/node": "6.0.46",
+    "concurrently": "3.2.0",
+    "typescript": "2.1.1"
   },
   "repository": {}
 }
