--- a/PlasticManufacturer.Client/PlasticManufacturer.Client.csproj
+++ b/PlasticManufacturer.Client/PlasticManufacturer.Client.csproj
@@ -99,6 +99,9 @@
   <ItemGroup>
     <Content Include="app\carriers\carrier-list.component.html" />
     <Content Include="app\carriers\carrier.component.html" />
+    <Content Include="app\customerStatus\custome-status.service.js" />
+    <Content Include="app\customerStatus\customer-status-list.component.html" />
+    <Content Include="app\customerStatus\customer-status.component.html" />
     <Content Include="app\customers\customer-list.component.html" />
     <Content Include="app\customers\customer.component.html" />
     <Content Include="app\customers\TesteTab.html" />
@@ -186,6 +189,7 @@
     <Content Include="package-lock.json" />
     <Content Include="images\facebox\Thumbs.db" />
     <Content Include="images\Thumbs.db" />
+    <Content Include="app\customerStatus\custome-status.service.js.map" />
     <None Include="Properties\PublishProfiles\Homolog.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -227,6 +231,12 @@
     <TypeScriptCompile Include="app\common\modal-trigger.directive.ts" />
     <TypeScriptCompile Include="app\common\simple-modal.component.ts" />
     <TypeScriptCompile Include="app\common\toastr.service.ts" />
+    <TypeScriptCompile Include="app\customerStatus\customer-status-guard.service.ts" />
+    <TypeScriptCompile Include="app\customerStatus\customer-status-list.component.ts" />
+    <TypeScriptCompile Include="app\customerStatus\customer-status.component.ts" />
+    <TypeScriptCompile Include="app\customerStatus\customer-status.model.ts" />
+    <TypeScriptCompile Include="app\customerStatus\customer-status.service.ts" />
+    <TypeScriptCompile Include="app\customerStatus\index.ts" />
     <TypeScriptCompile Include="app\customers\customer-guard.service.ts" />
     <TypeScriptCompile Include="app\customers\customer-list.component.ts" />
     <TypeScriptCompile Include="app\customers\customer.component.ts" />
