--- a/ViewAulus/bin/PlasticManufacturer.InfraStructure.dll.config
+++ b/ViewAulus/bin/PlasticManufacturer.InfraStructure.dll.config
@@ -5,11 +5,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="PlasticManufacturer" connectionString="Data Source=184.168.194.53; Initial Catalog=PlasticManufacturerDev; User Id=plasticDev; Password=plasticDev; MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
-   <!-- <add name="PlasticManufacturerContext" connectionString="Server=tcp:fdplastics.database.windows.net,1433;Initial Catalog=FDDatabase;Persist Security Info=False;User ID=fdroleadmin;Password=Mqaqaosdvnvc04*!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
-    <add name="PlasticManufacturer" connectionString="Data Source=184.168.194.53; Initial Catalog=PlasticManufacturerHom; User Id=plasticHom; Password=@plasticHom!; MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
-    <add name="PlasticManufacturer" connectionString="Data Source=184.168.194.53; Initial Catalog=PlasticManufacturerDev; User Id=plasticDev; Password=plasticDev; MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
-    <add name="PlasticManufacturer" connectionString="Data Source=.\SQLExpress; Initial Catalog=PlasticManufacturerContext; Integrated Security=True; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
+    <!--<add name="PlasticManufacturer" connectionString="Data Source=184.168.194.53; Initial Catalog=PlasticManufacturerDev; User Id=plasticDev; Password=plasticDev; MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
+      <add name="PlasticManufacturer" connectionString="Data Source=184.168.194.53; Initial Catalog=PlasticManufacturerHom; User Id=plasticHom; Password=@plasticHom!; MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/> -->
+     <add name="PlasticManufacturer" connectionString="Data Source=184.168.194.53; Initial Catalog=PlasticManufacturerDev; User Id=plasticDev; Password=plasticDev; MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
+   
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
