Api and folder to  customer and employee

--- a/PlasticManufacturer.API/PlasticManufacturer.API.csproj
+++ b/PlasticManufacturer.API/PlasticManufacturer.API.csproj
@@ -261,12 +261,17 @@
     <Compile Include="Controllers\AddressTypesController.cs" />
     <Compile Include="Controllers\CarriersController.cs" />
     <Compile Include="Controllers\CategoriesController.cs" />
+    <Compile Include="Controllers\CitiesController.cs" />
     <Compile Include="Controllers\CustomerContactedsController.cs" />
+    <Compile Include="Controllers\CustomerDefaultsController.cs" />
     <Compile Include="Controllers\CustomerRatingsController.cs" />
     <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\CustomerStatusController.cs" />
+    <Compile Include="Controllers\DepartmentsController.cs" />
     <Compile Include="Controllers\EmployeesController.cs" />
+    <Compile Include="Controllers\GendersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MaritalStatusController.cs" />
     <Compile Include="Controllers\OpacitiesController.cs" />
     <Compile Include="Controllers\PackagingsController.cs" />
     <Compile Include="Controllers\PelletsController.cs" />
@@ -274,6 +279,7 @@
     <Compile Include="Controllers\ShippingMethodsController.cs" />
     <Compile Include="Controllers\StatesController.cs" />
     <Compile Include="Controllers\TargetTypesController.cs" />
+    <Compile Include="Controllers\TitlesController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
