--- a/PlasticManufacturer.Client/Web.config
+++ b/PlasticManufacturer.Client/Web.config
@@ -25,6 +25,7 @@
   </system.codedom>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false"/>
+    <httpErrors errorMode="Detailed"/>
     <modules>
       <remove name="ApplicationInsightsWebTracking"/>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"
@@ -37,10 +38,14 @@
           <conditions logicalGrouping="MatchAll">
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+            <add input="{REQUEST_URI}" pattern="^/(api)" negate="true" />
           </conditions>
           <action type="Rewrite" url="/" />
         </rule>
       </rules>
     </rewrite>
+    <directoryBrowse enabled="true" />
   </system.webServer>
 </configuration>
+
+
